# red-pitaya-mdsplus

./: Common.am  Dockerfile  Makefile.am  README.md  configure.ac  red-pitaya-mdsplus.files  red-pitaya-mdsplus.includes  settings.sh
OS/buildroot/: Makefile.am  config.armel  config_2014.02.armhf  config_2016.02.armhf
OS/debian/: Makefile.am  debian.sh  image.sh  redpitaya.sh  update.sh
OS/tools/: discovery.sh  heartbeat.sh
fpga/: Makefile.am  red_pitaya_hsi_dts.tcl  red_pitaya_vivado.tcl  red_pitaya_vivado_project.tcl
fpga/driver/: Kbuild  Makefile  Makefile.am  axidma_golden.c  dtbtrybind_core.c
fpga/ip/: design_1.tcl  system.tcl
m4/: m4_ax_missing_m4_escape.m4
patches/: u-boot.script.kdbg
